scroll and height fixes (#1)
+ fix viewport height for mobile devices
+ customize scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,12 +2,14 @@
 
 @layer base {
   html {
-    @apply w-full text-white bg-zinc-900 smhp:text-[14px] text-[16px] lg:text-[18px] xl:text-[20px];
+    @apply w-full min-h-screen text-white bg-zinc-900 smhp:text-[14px] text-[16px] lg:text-[18px] xl:text-[20px];
     scroll-behavior: smooth;
   }
   body {
     -webkit-font-smoothing: antialiased;
     @apply w-full;
+    scrollbar-width: thin;
+    scrollbar-color: rgb(90, 90, 90) rgb(43, 43, 50);
   }
   h1 {
     @apply text-6xl leading-tight sm:leading-none;
@@ -27,6 +29,19 @@
   }
   a svg:hover {
     filter: drop-shadow(3px 5px 2px rgb(32 204 22 / 0.8));
+  }
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: rgb(43, 43, 50);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: rgb(90, 90, 90);
+    border: 3px solid rgb(120, 120, 120);
+    border-radius: 10px;
   }
 }
 
